[XXXValidator] refactoring file handling